--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: #20262F;
+    color: white;
+    font-family: sans-serif;
 }
 
 #board {
@@ -48,4 +50,19 @@ body {
     background-image: url("./queen.png");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#result {
+    display: none;
+    position: absolute;
+    background-color: black;
+    text-align: center;
+
+    top: 5%;
+    left: 50%;
+
+    transform: translate(-50%, 0%);
+
+    width: 300px;
+    padding: 32px;
 }
