--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     display: block;
     margin:0;
     height: 48px;
+    text-wrap: nowrap;
 }
 
 .tile {
@@ -66,4 +67,9 @@ body {
 
     width: 300px;
     padding: 32px;
+}
+
+.confirm, .tiledraghover {
+    border: solid 2px #00a2e8;
+    filter: brightness(2.0);
 }
